--- a/client/src/index.css
+++ b/client/src/index.css
@@ -11,4 +11,29 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: whitesmoke;
+}
+
+h1 {
+  text-shadow: 0 0 3px violet;
+}
+
+form {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 1vh;
+}
+
+input {
+  padding: 4px;
+  margin: 5px;
+}
+
+button {
+  cursor: pointer;
+  margin-top: 1vmax;
+  padding: 5px 8px;
+  color: dodgerblue;
+  background-color: floralwhite;
 }
